generated/checker-for-evaluation/generated/test-Memory-Leak-c8dafb0e4398dacc362832098a04b97da3b0395b/build_logs/4/build_error_log1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkEndFunction(const clang::ReturnStmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:106:46: error: ‘DataType’ in ‘struct clang::ento::ProgramStateTrait<{anonymous}::ReqCleanupMap>’ does not name a type
  106 |   typename ProgramStateTrait<ReqCleanupMap>::DataType ReqMap = State->get<ReqCleanupMap>();
      |                                              ^~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:106:89: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, bool> >::data_type’ {aka ‘llvm::ImmutableMap<const clang::ento::MemRegion*, bool>’} to ‘int’ in initialization
  106 |   typename ProgramStateTrait<ReqCleanupMap>::DataType ReqMap = State->get<ReqCleanupMap>();
      |                                                                ~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                                                         |
      |                                                                                         clang::ento::ProgramStatePartialTrait<llvm::ImmutableMap<const clang::ento::MemRegion*, bool> >::data_type {aka llvm::ImmutableMap<const clang::ento::MemRegion*, bool>}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:108:25: error: request for member ‘begin’ in ‘ReqMap’, which is of non-class type ‘int’
  108 |   for (auto It = ReqMap.begin(), End = ReqMap.end(); It != End; ++It) {
      |                         ^~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:108:60: error: ‘End’ was not declared in this scope
  108 |   for (auto It = ReqMap.begin(), End = ReqMap.end(); It != End; ++It) {
      |                                                            ^~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:111:24: warning: unused variable ‘ReqRegion’ [-Wunused-variable]
  111 |       const MemRegion *ReqRegion = It->first;
      |                        ^~~~~~~~~
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: At global scope:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:124:6: warning: ‘void {anonymous}::SAGenTestChecker::reportLeak(const clang::ento::MemRegion*, clang::ento::CheckerContext&, const clang::ento::CallEvent*) const’ defined but not used [-Wunused-function]
  124 | void SAGenTestChecker::reportLeak(const MemRegion *MR, CheckerContext &C, const CallEvent *Call) const {
      |      ^~~~~~~~~~~~~~~~
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
